kubernetes/deployment.yml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capstonemoviereservation
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  rules:
    - host: ""
      http:
        paths:
               - path: /payments
                 pathType: Prefix
                 backend:
                   service:
                     name: payment
                     port:
                       number: 8080
               - path: /movies
                 pathType: Prefix
                 backend:
                   service:
                     name: movie
                     port:
                       number: 8080
               - path: /reservations
                 pathType: Prefix
                 backend:
                   service:
                     name: reservation
                     port:
                       number: 8080
               - path: /messages
                 pathType: Prefix
                 backend:
                   service:
                     name: message
                     port:
                       number: 8080
               - path: /reviews
                 pathType: Prefix
                 backend:
                   service:
                     name: review
                     port:
                       number: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  labels:
    app: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: username/payment:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie
  labels:
    app: movie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie
  template:
    metadata:
      labels:
        app: movie
    spec:
      containers:
        - name: movie
          image: username/movie:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation
  labels:
    app: reservation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reservation
  template:
    metadata:
      labels:
        app: reservation
    spec:
      containers:
        - name: reservation
          image: username/reservation:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: message
  labels:
    app: message
spec:
  replicas: 1
  selector:
    matchLabels:
      app: message
  template:
    metadata:
      labels:
        app: message
    spec:
      containers:
        - name: message
          image: username/message:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: viewpage
  labels:
    app: viewpage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: viewpage
  template:
    metadata:
      labels:
        app: viewpage
    spec:
      containers:
        - name: viewpage
          image: username/viewpage:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: review
  labels:
    app: review
spec:
  replicas: 1
  selector:
    matchLabels:
      app: review
  template:
    metadata:
      labels:
        app: review
    spec:
      containers:
        - name: review
          image: username/review:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5


---


apiVersion: v1
kind: Service
metadata:
  name: payment
  labels:
    app: payment
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: payment


---


apiVersion: v1
kind: Service
metadata:
  name: movie
  labels:
    app: movie
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: movie


---


apiVersion: v1
kind: Service
metadata:
  name: reservation
  labels:
    app: reservation
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: reservation


---


apiVersion: v1
kind: Service
metadata:
  name: message
  labels:
    app: message
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: message


---


apiVersion: v1
kind: Service
metadata:
  name: viewpage
  labels:
    app: viewpage
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: viewpage


---


apiVersion: v1
kind: Service
metadata:
  name: review
  labels:
    app: review
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: review
